--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,13 @@ classifiers = [
   "Intended Audience :: Developers",
   "Topic :: Software Development :: Testing",
 ]
+packages = [
+  { include = "pytest_drf" },
+  { include = "tests", format = "sdist" },
+  { include = "pytest.ini", format = "sdist" },
+  { include = "LICENSE", format = "sdist" },
+  { include = "CHANGELOG.md", format = "sdist" },
+]
 
 [tool.poetry.dependencies]
 python = ">=3.6,<4.0"
