chore: hide Django deprecation warnings for url() originating from DRF

--- a/pytest.ini
+++ b/pytest.ini
@@ -28,3 +28,7 @@ python_classes = Test-* Describe-* Context-* With-* Without-* For-* When-* If-* 
 
 # Only methods matching these patterns are considered tests
 python_functions = test_* it_* its_*
+
+
+filterwarnings =
+    ignore:django.conf.urls.url\(\) is deprecated in favor of django.urls.re_path\(\)::rest_framework\..*
