--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,8 +33,8 @@ pytest-common-subject = "^1.0"
 pytest-lambda = "^1.1"
 
 [tool.poetry.dev-dependencies]
-pytest-django = "^3.9.0"
 pytest-camel-collect = "^1.0.1"
+pytest-djangoapp = "^0.14.0"
 django = "^3"
 
 [tool.poetry.plugins."pytest11"]
