--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,11 +31,13 @@ pytest = ">=3.6"
 pytest-assert-utils = "^0"
 pytest-common-subject = "^1.0"
 pytest-lambda = "^1.2.3"
+typing_extensions = { version = "^3.7.4", python = "<3.8" }
 
 [tool.poetry.dev-dependencies]
-pytest-camel-collect = "^1.0.1"
-pytest-djangoapp = "^0.14.0"
 django = "^3"
+pytest-camel-collect = "^1.0.1"
+pytest-djangoapp = "^0.15.0"
+tox = "^3.20.1"
 
 [tool.poetry.plugins."pytest11"]
 drf = "pytest_drf.plugin"
