--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: python
-python: 3.8
+python:
+  - '3.6'
+  - '3.7'
+  - '3.8'
 
 before_install: pip install poetry
-install: poetry install
-script: poetry run py.test
+install: pip install tox-travis
+script: tox
