chore: add tox envs to test supported pytest version 3.6 to 7.1

--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,35 @@
 [tox]
 isolated_build = true
-envlist = py{37,38,39,310,311}
+envlist = py{37,38,39,310,311}-pytest{36,39,40,44,45,46,50,51,52,53,54,60,61,62,70,71}
 
 
 [testenv]
 whitelist_externals = poetry
 
-commands_pre = poetry install -v --no-root
+deps =
+  pytest36: pytest~=3.6.0
+  pytest39: pytest~=3.9.0
+
+  # NOTE: the attrs dep resolves an issue with this version of pytest and attrs>19.2.0
+  #       see https://stackoverflow.com/a/58189684/148585
+  pytest40: attrs==19.1.0
+  pytest40: pytest~=4.0.0
+
+  pytest44: pytest~=4.4.0
+  pytest45: pytest~=4.5.0
+  pytest46: pytest~=4.6.0
+  pytest50: pytest~=5.0.0
+  pytest51: pytest~=5.1.0
+  pytest52: pytest~=5.2.0
+  pytest53: pytest~=5.3.0
+  pytest54: pytest~=5.4.0
+  pytest60: pytest~=6.0.0
+  pytest61: pytest~=6.1.0
+  pytest62: pytest~=6.2.0
+  pytest70: pytest~=7.0.0
+  pytest71: pytest~=7.1.0
+
+install_command =
+  {toxinidir}/_tox_install_command.sh {opts} {packages}
+
 commands = poetry run pytest
